[package]
name = "sampleBot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17", features = ["macros", "ctrlc_handler"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
sysinfo = "0.38.4"
async-trait = "0.1.89"